RESOLVED FIXED244681
[LFC][Floats] Float box with clear should not be placed higher than the initial static position
https://bugs.webkit.org/show_bug.cgi?id=244681
Summary [LFC][Floats] Float box with clear should not be placed higher than the initi...
alan
Reported 2022-09-01 11:33:01 PDT
fix fast/css-intrinsic-dimensions/width-expected.html
Attachments
Patch (1.49 KB, patch)
2022-09-01 11:34 PDT, alan
no flags
alan
Comment 1 2022-09-01 11:34:46 PDT
EWS
Comment 2 2022-09-01 16:07:07 PDT
Committed 254076@main (809abd50e804): <https://commits.webkit.org/254076@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462077 [details].
Radar WebKit Bug Importer
Comment 3 2022-09-01 16:08:17 PDT
Note You need to log in before you can comment on or make changes to this bug.