[LFC][Floats] Float box with clear should not be placed higher than the initial static position https://bugs.webkit.org/show_bug.cgi?id=244681

Reviewed by Antti Koivisto.

We already do this for floats with "clear: none".

* Source/WebCore/layout/floats/FloatingContext.cpp:
(WebCore::Layout::FloatingContext::positionForFloat const):

Canonical link: https://commits.webkit.org/254076@main